<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/represent"
        android:layout_width="294dp"
        android:layout_height="70dp"
        android:layout_marginEnd="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="79dp"
        android:gravity="center"
        android:text="@string/represent"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/random_location"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="#535353"
        android:onClick="random_openCongressionalActivity"
        android:text="@string/random_location"
        android:textColor="#FFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_location" />

    <Button
        android:id="@+id/current_location"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="#204af1"
        android:onClick="current_openCongressionalActivity"
        android:text="@string/current_location"
        android:textColor="#FFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zip_code" />

    <Button
        android:id="@+id/zip_code"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginTop="51dp"
        android:background="#ff334e"
        android:onClick="zip_openCongressionalActivity"
        android:text="@string/zip_code"
        android:textColor="#FFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="310dp"
        android:layout_height="45dp"
        android:layout_marginEnd="51dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="51dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="22dp"
        android:gravity="center_horizontal"
        android:text="@string/welcome"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/represent" />

    <TextView
        android:id="@+id/enter"
        android:layout_width="310dp"
        android:layout_height="38dp"
        android:layout_marginEnd="51dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="51dp"
        android:layout_marginStart="50dp"
        android:gravity="center_horizontal"
        android:text="@string/enter_one_of_the_following"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

</android.support.constraint.ConstraintLayout>